# orbit-mind

./: .gitignore  MIGRATION.md  README.md  config.example.yaml
.qoder/skills/home-hub/: SKILL.md
doc/: architecture.md  deployment.md  development.md  message-protocol.md
home-agent/: command_executor.py  command_logger.py  config.py  home-agent.service  install.sh  main.py  mns_client.py  requirements.txt  security.py  ws_client.py
home-agent-skill/amap-gui/: SKILL.md
home-agent-skill/epd-display/: SKILL.md
home-agent-skill/flyai/: SKILL.md
home-agent-skill/home-hub/: README.md  SKILL.md
home-agent-skill/home-hub/scripts/: list_nodes.py  poll_result.py  send_command.py
home-agent-skill/mars-cli/: SKILL.md
mars-sandbox/: DEPLOYMENT.md  QUICKSTART.md  WEBSOCKET_IMPLEMENTATION.md  deploy.sh  mars-sandbox.service  nginx-mars-sandbox.conf  test_playwright.py  test_websocket.py
mars-sandbox/backend/: .gitignore  requirements.txt
mars-sandbox/backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  scanner.py  schemas.py
mars-sandbox/backend/app/routers/: auth.py  board.py  commands.py  dashboard.py  drive.py  meals.py  nodes.py  pages.py  scan.py  schedule.py  stars.py  tags.py  videos.py
mars-sandbox/backend/app/services/: ai_service.py  command_result.py  video_processor.py
mars-sandbox/backend/app/utils/: json_helpers.py  oss_url.py  sts_token.py  timezone.py
mars-sandbox/backend/app/ws/: __init__.py  connection_pool.py  dashboard.py  handlers.py  router.py
mars-sandbox/backend/tests/: README.md  conftest.py  test_auth.py  test_config.py  test_dependencies.py  test_models.py  test_scanner.py  test_schemas.py
mars-sandbox/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts
mars-sandbox/frontend/patches/: @rc-component__trigger.patch
mars-sandbox/frontend/public/: manifest.json
mars-sandbox/frontend/src/: App.tsx  global.css  main.tsx  utils.ts
mars-sandbox/frontend/src/api/: auth.ts  board.ts  client.ts  drive.ts  meals.ts  nodes.ts  pages.ts  scan.ts  schedule.ts  stars.ts  tags.ts  videos.ts
mars-sandbox/frontend/src/components/: BoardManagement.tsx  CardGrid.tsx  CloudDrive.tsx  CommandModal.tsx  Dashboard.tsx  DashboardButterflies.tsx  DashboardPets.tsx  EditProjectModal.tsx  FamilySettings.tsx  Layout.tsx  LearningPlan.tsx  LoginPage.tsx  MealHistory.tsx  MealManagement.tsx  MealPlanner.tsx  MealRecorder.tsx  NodeManagement.tsx  PagePreview.tsx  ProjectCard.tsx  ScanButton.tsx  SettingsPage.tsx  StarWall.tsx  VideoList.tsx  VideoPlayer.tsx  VideoUpload.tsx
mars-sandbox/frontend/src/hooks/: useAuth.tsx  useDashboardWs.ts
mars-sandbox/frontend/src/types/: index.ts
shared/: __init__.py  message_protocol.py
tools/epd_tool/: __init__.py  adapter.py  ble_client.py  build.sh  cli.py  commands.py  config.py  constants.py  daily_quote.py  image_processing.py  pyproject.toml
tools/epd_tool/epd_tool/: ble_client.py  commands.py
tools/epd_tool/html/: 墨水屏日历.html
tools/epd_tool/html/墨水屏日历_files/: hm.js  index-BX6VTsSU.css  index-CmY5y2Dj.js
tools/mars-cli/: build.sh  deploy_mars_cli.sh  pyproject.toml
tools/mars-cli/mars_cli/: __init__.py  client.py  cmd_board.py  cmd_config.py  cmd_dashboard.py  cmd_drive.py  cmd_meals.py  cmd_nodes.py  cmd_pages.py  cmd_scan.py  cmd_schedule.py  cmd_stars.py  cmd_tags.py  cmd_videos.py  context.py  main.py
