[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-cli"
version = "1.0.0"
description = "mars-sandbox 命令行客户端 - 通过 HTTP API 管理远程节点并执行命令"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Orbit Mind Contributors"},
]
keywords = ["mars-sandbox", "remote", "cli", "home-agent", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
mars-cli = "mars_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mars_cli*"]

[project.readme]
text = "mars-sandbox CLI 客户端 - 通过 HTTP API 管理远程 home-agent 节点，支持节点查询、远程命令执行等操作。"
content-type = "text/plain"
