[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-cli"
version = "2.1.0"
description = "mars-sandbox 命令行客户端 - AI Agent 友好的家庭中枢管理平台全功能 CLI"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Orbit Mind Contributors"},
]
keywords = ["mars-sandbox", "remote", "cli", "home-agent", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
mars-cli = "mars_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mars_cli*"]

[project.readme]
text = "mars-sandbox 全功能 CLI 客户端 - 面向 AI Agent，支持节点管理、留言板、餐饮计划、视频学习、云盘、页面、标签、扫描等全部功能。"
content-type = "text/plain"
